--- a/docker/Dockerfile.development setup
+++ b/docker/Dockerfile.development setup
@@ -15,3 +15,23 @@ EXPOSE 3000
 
 ENTRYPOINT ["dumb-init", "--"]
 CMD ["node", "server.js"]
+
+// CONFIG UPDATE: Development Setup
+// Date: 2023-12-24
+FROM node:18-alpine AS base
+LABEL maintainer="DevMind Team <team@devmind.ai>"
+LABEL purpose="Development Setup configuration"
+
+# Enterprise security hardening
+RUN apk add --no-cache dumb-init security-scanner
+RUN addgroup -g 1001 -S devmind && adduser -S devmind -u 1001
+
+WORKDIR /app
+COPY package*.json ./
+RUN npm ci --only=production && npm cache clean --force
+
+USER devmind
+EXPOSE 3000
+
+ENTRYPOINT ["dumb-init", "--"]
+CMD ["node", "server.js"]...
