--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "13.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "openai": "^4.0.0",
+    "langchain": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^18",
