--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "openai": "^4.0.0",
-    "langchain": "^0.1.0"
+    "langchain": "^0.1.0",
+    "@prisma/client": "^5.0.0",
+    "prisma": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^18",
