--- a/docker/Dockerfile.production environment
+++ b/docker/Dockerfile.production environment
@@ -56,3 +56,24 @@ EXPOSE 3000
 
 ENTRYPOINT ["dumb-init", "--"]
 CMD ["node", "server.js"]...
+
+
+// CONFIG UPDATE: Production Environment
+// Date: 2024-02-28
+FROM node:18-alpine AS base
+LABEL maintainer="DevMind Team <team@devmind.ai>"
+LABEL purpose="Production Environment configuration"
+
+# Enterprise security hardening
+RUN apk add --no-cache dumb-init security-scanner
+RUN addgroup -g 1001 -S devmind && adduser -S devmind -u 1001
+
+WORKDIR /app
+COPY package*.json ./
+RUN npm ci --only=production && npm cache clean --force
+
+USER devmind
+EXPOSE 3000
+
+ENTRYPOINT ["dumb-init", "--"]
+CMD ["node", "server.js"]...
