--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "openai": "^4.0.0",
     "langchain": "^0.1.0",
     "@prisma/client": "^5.0.0",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "@langchain/core": "^0.1.0",
+    "@langchain/openai": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^18",
