--- a/kubernetes/load balancer-config.yaml
+++ b/kubernetes/load balancer-config.yaml
@@ -18,3 +18,26 @@ data:
         metrics: prometheus
         tracing: jaeger
         logging: elasticsearch
+
+// CONFIG UPDATE: Load Balancer
+// Date: 2024-03-28
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: devmind-load balancer-config
+  namespace: devmind-production
+data:
+  config.yaml: |
+    load balancer:
+      enabled: true
+      mode: enterprise
+      security:
+        encryption: AES-256
+        compliance: SOC2
+      performance:
+        caching: redis-cluster
+        scaling: auto
+      monitoring:
+        metrics: prometheus
+        tracing: jaeger
+        logging: elasticsearch...
