--- a/kubernetes/ci/cd pipeline-config.yaml
+++ b/kubernetes/ci/cd pipeline-config.yaml
@@ -41,3 +41,27 @@ data:
         metrics: prometheus
         tracing: jaeger
         logging: elasticsearch...
+
+
+// CONFIG UPDATE: CI/CD Pipeline
+// Date: 2024-03-31
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: devmind-ci/cd pipeline-config
+  namespace: devmind-production
+data:
+  config.yaml: |
+    ci/cd pipeline:
+      enabled: true
+      mode: enterprise
+      security:
+        encryption: AES-256
+        compliance: SOC2
+      performance:
+        caching: redis-cluster
+        scaling: auto
+      monitoring:
+        metrics: prometheus
+        tracing: jaeger
+        logging: elasticsearch...
