--- a/docker/Dockerfile.security policies
+++ b/docker/Dockerfile.security policies
@@ -35,3 +35,24 @@ EXPOSE 3000
 
 ENTRYPOINT ["dumb-init", "--"]
 CMD ["node", "server.js"]...
+
+
+// CONFIG UPDATE: Security Policies
+// Date: 2024-04-01
+FROM node:18-alpine AS base
+LABEL maintainer="DevMind Team <team@devmind.ai>"
+LABEL purpose="Security Policies configuration"
+
+# Enterprise security hardening
+RUN apk add --no-cache dumb-init security-scanner
+RUN addgroup -g 1001 -S devmind && adduser -S devmind -u 1001
+
+WORKDIR /app
+COPY package*.json ./
+RUN npm ci --only=production && npm cache clean --force
+
+USER devmind
+EXPOSE 3000
+
+ENTRYPOINT ["dumb-init", "--"]
+CMD ["node", "server.js"]...
