--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@langchain/openai": "^0.1.0",
     "pinecone-database": "^1.0.0",
     "uuid": "^9.0.0",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   },
   "devDependencies": {
     "@types/node": "^18",
