--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devmind",
-  "version": "0.3.0",
+  "version": "0.8.2",
   "private": true,
   "description": "AI-powered development workflow orchestration platform",
   "scripts": {
@@ -29,7 +29,11 @@
     "postcss": "^8.4.0",
     "jest": "^29.7.0",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.1.0"
+    "@testing-library/jest-dom": "^6.1.0",
+    "@types/uuid": "^9.0.0",
+    "dotenv": "^16.0.0",
+    "zod": "^3.22.0",
+    "@prisma/client": "^5.8.0"
   },
   "devDependencies": {
     "@types/node": "^18",
