--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devmind",
-  "version": "0.8.2",
+  "version": "1.0.0",
   "private": true,
   "description": "AI-powered development workflow orchestration platform",
   "scripts": {
@@ -33,7 +33,10 @@
     "@types/uuid": "^9.0.0",
     "dotenv": "^16.0.0",
     "zod": "^3.22.0",
-    "@prisma/client": "^5.8.0"
+    "@prisma/client": "^5.8.0",
+    "@langchain/community": "^0.2.0",
+    "chromadb": "^1.8.0",
+    "ioredis": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^18",
