--- a/infrastructure/disaster-recovery.yaml
+++ b/infrastructure/disaster-recovery.yaml
@@ -115,3 +115,36 @@ spec:
     matchLabels:
       app: devmind
    ...
+
+
+// INFRASTRUCTURE UPDATE: Disaster Recovery
+// Date: 2024-10-09
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-disaster-recovery
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: disaster-recovery
+spec:
+  selector:
+    app: devmind
+    component: disaster-recovery
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-disaster-recovery
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: devmind
+   ...
