Scale Kubernetes Cluster infrastructure for enterprise load

--- a/infrastructure/kubernetes-cluster.yaml
+++ b/infrastructure/kubernetes-cluster.yaml
@@ -50,3 +50,34 @@ spec:
           value: "production"
         - name: COMPONENT
           value: "Kubernetes Cluster"
+
+// INFRASTRUCTURE UPDATE: Kubernetes Cluster
+// Date: 2024-10-17
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-kubernetes-cluster
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: kubernetes-cluster
+spec:
+  selector:
+    app: devmind
+    component: kubernetes-cluster
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-kubernetes-cluster
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: devmind...
