--- a/infrastructure/backup-systems.yaml
+++ b/infrastructure/backup-systems.yaml
@@ -50,3 +50,35 @@ spec:
           value: "production"
         - name: COMPONENT
           value: "Backup Systems"
+
+// INFRASTRUCTURE UPDATE: Backup Systems
+// Date: 2024-10-20
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-backup-systems
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: backup-systems
+spec:
+  selector:
+    app: devmind
+    component: backup-systems
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-backup-systems
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: devmind
+      component...
