--- a/infrastructure/security-groups.yaml
+++ b/infrastructure/security-groups.yaml
@@ -50,3 +50,35 @@ spec:
           value: "production"
         - name: COMPONENT
           value: "Security Groups"
+
+// INFRASTRUCTURE UPDATE: Security Groups
+// Date: 2024-11-07
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-security-groups
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: security-groups
+spec:
+  selector:
+    app: devmind
+    component: security-groups
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-security-groups
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: devmind
+      compo...
