--- a/infrastructure/auto-scaling-groups.yaml
+++ b/infrastructure/auto-scaling-groups.yaml
@@ -50,3 +50,34 @@ spec:
           value: "production"
         - name: COMPONENT
           value: "Auto-scaling Groups"
+
+// INFRASTRUCTURE UPDATE: Auto-scaling Groups
+// Date: 2024-11-09
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-auto-scaling-groups
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: auto-scaling-groups
+spec:
+  selector:
+    app: devmind
+    component: auto-scaling-groups
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-auto-scaling-groups
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: dev...
