--- a/infrastructure/backup-systems.yaml
+++ b/infrastructure/backup-systems.yaml
@@ -115,3 +115,36 @@ spec:
     matchLabels:
       app: devmind
       component...
+
+
+// INFRASTRUCTURE UPDATE: Backup Systems
+// Date: 2024-11-18
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-backup-systems
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: backup-systems
+spec:
+  selector:
+    app: devmind
+    component: backup-systems
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-backup-systems
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: devmind
+      component...
