--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devmind",
-  "version": "1.0.0",
+  "version": "1.2.1",
   "private": true,
   "description": "AI-powered development workflow orchestration platform",
   "scripts": {
@@ -36,7 +36,9 @@
     "@prisma/client": "^5.8.0",
     "@langchain/community": "^0.2.0",
     "chromadb": "^1.8.0",
-    "ioredis": "^5.3.0"
+    "ioredis": "^5.3.0",
+    "stripe": "^14.0.0",
+    "@sentry/nextjs": "^7.88.0"
   },
   "devDependencies": {
     "@types/node": "^18",
