--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
     "chromadb": "^1.8.0",
     "ioredis": "^5.3.0",
     "stripe": "^14.0.0",
-    "@sentry/nextjs": "^7.88.0"
+    "@sentry/nextjs": "^7.88.0",
+    "jsonwebtoken": "^9.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "bcryptjs": "^2.4.0",
+    "@types/bcryptjs": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^18",
