--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devmind",
-  "version": "1.2.1",
+  "version": "1.4.0",
   "private": true,
   "description": "AI-powered development workflow orchestration platform",
   "scripts": {
@@ -42,7 +42,12 @@
     "jsonwebtoken": "^9.0.0",
     "@types/jsonwebtoken": "^9.0.0",
     "bcryptjs": "^2.4.0",
-    "@types/bcryptjs": "^2.4.0"
+    "@types/bcryptjs": "^2.4.0",
+    "websocket": "^1.0.34",
+    "ws": "^8.14.0",
+    "@types/ws": "^8.5.0",
+    "socket.io": "^4.7.0",
+    "socket.io-client": "^4.7.0"
   },
   "devDependencies": {
     "@types/node": "^18",
