--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devmind",
-  "version": "1.4.0",
+  "version": "2.1.0",
   "private": true,
   "description": "AI-powered development workflow orchestration platform",
   "scripts": {
@@ -47,7 +47,12 @@
     "ws": "^8.14.0",
     "@types/ws": "^8.5.0",
     "socket.io": "^4.7.0",
-    "socket.io-client": "^4.7.0"
+    "socket.io-client": "^4.7.0",
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-node-gpu": "^4.15.0",
+    "huggingface": "^1.1.0",
+    "@google-cloud/aiplatform": "^3.12.0",
+    "aws-sdk": "^2.1481.0"
   },
   "devDependencies": {
     "@types/node": "^18",
