Implement Network Configuration with high availability

--- a/infrastructure/network-configuration.yaml
+++ b/infrastructure/network-configuration.yaml
@@ -50,3 +50,34 @@ spec:
           value: "production"
         - name: COMPONENT
           value: "Network Configuration"
+
+// INFRASTRUCTURE UPDATE: Network Configuration
+// Date: 2024-12-20
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-network-configuration
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: network-configuration
+spec:
+  selector:
+    app: devmind
+    component: network-configuration
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-network-configuration
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      ...
