--- a/infrastructure/container-registry.yaml
+++ b/infrastructure/container-registry.yaml
@@ -145,3 +145,35 @@ spec:
   selector:
     matchLabels:
       app: devmind...
+
+
+// INFRASTRUCTURE UPDATE: Container Registry
+// Date: 2025-01-04
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-container-registry
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: container-registry
+spec:
+  selector:
+    app: devmind
+    component: container-registry
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-container-registry
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: devmind...
