--- a/infrastructure/monitoring-infrastructure.yaml
+++ b/infrastructure/monitoring-infrastructure.yaml
@@ -80,3 +80,65 @@ spec:
   replicas: 3
   selector:
     mat...
+
+
+// INFRASTRUCTURE UPDATE: Monitoring Infrastructure
+// Date: 2024-12-25
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-monitoring-infrastructure
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: monitoring-infrastructure
+spec:
+  selector:
+    app: devmind
+    component: monitoring-infrastructure
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-monitoring-infrastructure
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    mat...
+
+
+// INFRASTRUCTURE UPDATE: Monitoring Infrastructure
+// Date: 2025-01-06
+apiVersion: v1
+kind: Service
+metadata:
+  name: devmind-monitoring-infrastructure
+  namespace: devmind-production
+  labels:
+    app: devmind
+    component: monitoring-infrastructure
+spec:
+  selector:
+    app: devmind
+    component: monitoring-infrastructure
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: devmind-monitoring-infrastructure
+  namespace: devmind-production
+spec:
+  replicas: 3
+  selector:
+    mat...
