--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@tensorflow/tfjs-node-gpu": "^4.15.0",
     "huggingface": "^1.1.0",
     "@google-cloud/aiplatform": "^3.12.0",
-    "aws-sdk": "^2.1481.0"
+    "aws-sdk": "^2.1481.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/node": "^18",
